import Net-Server-POP3 0.0004 from CPAN
git-cpan-module:   Net-Server-POP3
git-cpan-version:  0.0004
git-cpan-authorid: JONADAB
git-cpan-file:     authors/id/J/JO/JONADAB/Net-Server-POP3-0.0004.zip

--- a/readme.html
+++ b/readme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Net::Server::POP3 - The Server Side of the POP3 Protocol</title>
+<title>Net::Server::POP3 - The Server Side of the POP3 Protocol for email</title>
 <link rev="made" href="mailto:root@localhost" />
 </head>
 
@@ -33,7 +33,7 @@
 <p>
 </p>
 <h1><a name="name">NAME</a></h1>
-<p>Net::Server::POP3 - The Server Side of the POP3 Protocol</p>
+<p>Net::Server::POP3 - The Server Side of the POP3 Protocol for email</p>
 <p>
 </p>
 <hr />
@@ -330,9 +330,11 @@ LICENSE file included with this module.</p>
 <pre>
   perl(1)
   Net::Server <a href="http://search.cpan.org/search?query=Net::Server">http://search.cpan.org/search?query=Net::Server</a>
-  Mail::POP3Client <a href="http://search.cpan.org/search?query=Mail::POP3Client">http://search.cpan.org/search?query=Mail::POP3Client</a></pre>
+  Mail::POP3Client <a href="http://search.cpan.org/search?query=Mail::POP3Client">http://search.cpan.org/search?query=Mail::POP3Client</a>
+  The simpletest.pl script included in the scripts directory in this distribution.</pre>
 <p><em>Net::Server</em>
-<em>Mail::POP3Client</em></p>
+<em>Mail::POP3Client</em>
+<em>simpletest.pl</em></p>
 <p>
 </p>
 <h2><a name="sample_function">sample_function</a></h2>
