import Net-Server-POP3 0.0007 from CPAN
git-cpan-module:   Net-Server-POP3
git-cpan-version:  0.0007
git-cpan-authorid: JONADAB
git-cpan-file:     authors/id/J/JO/JONADAB/Net-Server-POP3-0.0007.zip

--- a/readme.html
+++ b/readme.html
@@ -16,6 +16,9 @@
 <LI><A HREF="#USAGE">USAGE
 
 </A></LI>
+<LI><A HREF="#REQUIRES">REQUIRES
+
+</A></LI>
 <LI><A HREF="#BUGS">BUGS
 
 </A></LI>
@@ -433,7 +436,13 @@ for debugging sample scripts.)
 
 </P></DD>
 </DL>
-<H1><A NAME="BUGS">BUGS
+<H1><A NAME="REQUIRES">REQUIRES
+
+</A></H1>
+
+<P>Net::Server, Exporter
+
+</P><H1><A NAME="BUGS">BUGS
 
 </A></H1>
 <DL><DT><A NAME="line%20endings">line endings
@@ -568,10 +577,10 @@ Net::Server::POP3.
 <P><A HREF="http://search.cpan.org/search?query=Mail::POP3Client">Mail::POP3Client</A>
 
 </P>
-<P><A HREF="http://search.cpan.org/src/JONADAB/Net-Server-POP3-0.0006/scripts/simpletest.pl">simpletest.pl</A>
+<P><A HREF="http://search.cpan.org/src/JONADAB/Net-Server-POP3-0.0007/scripts/simpletest.pl">simpletest.pl</A>
 
 </P>
-<P><A HREF="http://search.cpan.org/src/JONADAB/Net-Server-POP3-0.0006/scripts/proxytest.pl">proxytest.pl</A>
+<P><A HREF="http://search.cpan.org/src/JONADAB/Net-Server-POP3-0.0007/scripts/proxytest.pl">proxytest.pl</A>
 
 </P>
 <P>For a more minimalist framework with a different interface, see
